# SDFReader

./: .gitignore  CMakeLists.txt  README.md  class.pu  fileCheck.cpp  install_manifest.txt  main.cpp  parTree  parTree.cpp  proEyEle.cpp  sequence.pu
example/: AnalyzePar.cpp  GetHists.cpp  GetList.cpp  GetParInfo.cpp  GetTime.cpp  MacroParticle.C  MacroParticle.h  MakeSlice.cpp  ParallelAna.cpp  Plot3D.cpp  PlotExEy.cpp  angP.cpp  electron.C  electron.h  script.sh  sliceEyEle.cpp
include/: RunMode.hpp  SDF2ROOTLinkDef.h  SDF2ROOTLinkDef.hpp  TBlock.hpp  TBlockPlainMesh.hpp  TBlockPlainVar.hpp  TBlockPointMesh.hpp  TBlockPointVar.hpp  TConverter.hpp  TDataTree.hpp  TFieldValue.hpp  TMacroParticle.hpp  TMakeTree.hpp  TMeshValue.hpp  TProbe.hpp  TSDFBlock.hpp  TSDFBlock.hpp.bu  TSDFBlockPlainMesh.hpp  TSDFBlockPlainVar.hpp  TSDFBlockPointMesh.hpp  TSDFBlockPointVar.hpp  TSDFReader.hpp
src/: TBlock.cpp  TBlockPlainMesh.cpp  TBlockPlainVar.cpp  TBlockPointMesh.cpp  TBlockPointVar.cpp  TConverter.cpp  TDataTree.cpp  TFieldValue.cpp  TMacroParticle.cpp  TMakeTree.cpp  TMeshValue.cpp  TProbe.cpp  TSDFBlock.cpp  TSDFBlockPlainMesh.cpp  TSDFBlockPlainVar.cpp  TSDFBlockPointMesh.cpp  TSDFBlockPointVar.cpp  TSDFReader.cpp
test/: Analyzer.cpp  copyFiles.C  script.sh  test.cpp
